# CPP_exercises_assignment4_1_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: pet.h  pet_file_operations.h  user_interface.h
src/: CMakeLists.txt  pet.cpp  pet_file_operations.cpp  user_interface.cpp
stored_pets/: Garfield  Oscar  Severin
tests/: CMakeLists.txt  tests.cpp
